--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS13K Games 2020 - entry by Rene Hangstrup Møller</title>
     <style>
-        body: { margin: 0; }
-        canvas: { display: block; }
+        body { margin: 0; padding: 0; }
+        canvas { display: block; }
     </style>
 </head>
 <body>
-    <script src="https://js13kgames.com/webxr-src/three.js"></script>    
+    <script src="https://js13kgames.com/webxr-src/2020/three.js"></script>    
 </body>
 </html>
